--- a/porj.html
+++ b/porj.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Título do site</title>
+    <title>Curso em c</title>
 </head>
 <body>
     <main>
         <header>
-            <h1>Título do site </h1>
+            <h1>TCurso em c</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p> Texto do artigo 001</p>
+            <h2>linguagem c </h2>
+            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum sit cumque commodi dolores provident. Eos inventore magni voluptates eum deserunt quibusdam dolores consequatur neque atque vitae aut qui, voluptate consequuntur.</p>
             <article>
-                <h2>Artigo 002</h2>
-                <p>Texto artigo 002</p>
+                <h2>curso em c++</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore accusantium, ab fuga voluptatum nesciunt neque nulla numquam quis iure quod dolores rem explicabo? Assumenda, vitae sint. Quas dolores non sequi.</p>
             </article>
         </article>
     </main>
